--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "base58-native": "0.1.2",
     "bignum": "*",
     "morgan": "*",
-    "bitcore": "git://github.com/bobbysmv/bitcore.git#e728f98f5b1d9fb3e93c41623c282068c4929fd8",
+    "bitcore": "git://github.com/bobbysmv/bitcore.git#bitzeny",
     "bufferput": "git://github.com/bitpay/node-bufferput.git",
     "buffertools": "*",
     "commander": "^2.3.0",
